Further fixes for Card header alignments (#2912)

--- a/panel/template/material/material.css
+++ b/panel/template/material/material.css
@@ -136,6 +136,9 @@ div.bk.mdc-card {
   align-items: center;
   display: flex !important;
   position: relative !important;
+}
+
+.bk.mdc-card-title:nth-child(2) {
   margin-left: -1.4em;
 }
 
